main.css
html, body {
	font-family: "Lato", sans-serif;
	min-height: 100%;
	display: flex;
	flex-direction: column;
	font-weight: lighter;
	line-height: 1.7;
}


p {
	max-width: 65%;
	min-height: 500px;
}

.container {
	display: flex;
	background-image: url(https://i.imgur.com/VU4Bvo4.jpg);
	background-position: center;
	background-size: auto;
	background-repeat: no-repeat;
}

div {
	padding-right: 30px;
	height: 100%;
	width: 100%;
}

h1 {
	border: 3px solid black;
	border-width: thin;
	padding: 10px;
}

h2 {
	text-align: center;
}

.nav {
	background-image: url(http://66.media.tumblr.com/58c31b332e6d447253e30cf67b7c1c54/tumblr_o23jekLo981u8wonlo1_500.jpg);
	background-size: cover;
	background-position: center;
	max-width: 25%;
	min-width: 140px;
	flex: 1;
}

/* Navagation */

/*This nav class was used for a nav bar that would be displayed on the left side of the page and would be listed down with bullet points.*/
.oldnav li {
	margin: 0;
	padding: 0 10px;
	display: inline;
}
/*This is the currect nav class and is displayed horizontally.*/
.navbeta li{
	display: inline;
	margin 0;
	padding 0 10px;
}

.nav h2 {
	text-align: center;
	padding-left: 12px;
}

.main {
	padding-left: 60px;
	min-width: 75%;
}

